--- a/ImagePresto/ImagePresto.csproj
+++ b/ImagePresto/ImagePresto.csproj
@@ -64,6 +64,9 @@
     <Compile Include="IPConfig.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="ImageScan.resx">
+      <DependentUpon>ImageScan.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
