--- a/ImagePresto/ImagePresto.csproj
+++ b/ImagePresto/ImagePresto.csproj
@@ -55,6 +55,7 @@
     <Compile Include="ImageScan.Designer.cs">
       <DependentUpon>ImageScan.cs</DependentUpon>
     </Compile>
+    <Compile Include="ImageSize.cs" />
     <Compile Include="ImageView.cs">
       <SubType>Form</SubType>
     </Compile>
