--- a/ImagePresto/ImagePresto.csproj
+++ b/ImagePresto/ImagePresto.csproj
@@ -56,6 +56,7 @@
       <DependentUpon>ImageScan.cs</DependentUpon>
     </Compile>
     <Compile Include="ImageSize.cs" />
+    <Compile Include="ImageSizeItem.cs" />
     <Compile Include="ImageView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -68,6 +69,9 @@
     <Compile Include="ScanProgressReport.cs" />
     <EmbeddedResource Include="ImageScan.resx">
       <DependentUpon>ImageScan.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ImageView.resx">
+      <DependentUpon>ImageView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
